P5 E-Learning/force-app/main/default/objects/Unit_Response__c/Unit_Response__c.object-meta.xml
<CustomObject>
    <label>Unit Response</label>
    <nameField>
        <displayFormat>UR-{0000}</displayFormat>
        <label>Unit Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>