P5 E-Learning/force-app/main/default/objects/Unit_Response__c/fields/Student_Module__c.field-meta.xml
<CustomField>
    <fullName>Student_Module__c</fullName>
    <label>Student-Module</label>
    <referenceTo>Student_Module__c</referenceTo>
    <relationshipName>Students_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>